--- a/app/src/main/res/drawable/ic_barckpurble.xml
+++ b/app/src/main/res/drawable/ic_barckpurble.xml
@@ -4,24 +4,28 @@
     android:height="40dp"
     android:viewportWidth="40"
     android:viewportHeight="40">
-  <path
-      android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
-      android:strokeColor="#00000000">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startY="-9.740159E-16"
-          android:endY="40.4"
-          android:startX="-6.4934393E-16"
-          android:endX="40.8"
-          android:type="linear">
-        <item android:offset="0" android:color="#FF343F3F"/>
-        <item android:offset="1" android:color="#FFC86DD7"/>
-      </gradient>
-    </aapt:attr>
-  </path>
-  <path
-      android:strokeWidth="1"
-      android:pathData="M20,20m-19.5,0a19.5,19.5 0,1 1,39 0a19.5,19.5 0,1 1,-39 0"
-      android:fillColor="#00000000"
-      android:strokeColor="#fff"/>
+    <path
+        android:pathData="M20,20m-20,0a20,20 0,1 1,40 0a20,20 0,1 1,-40 0"
+        android:strokeColor="#00000000">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:endX="40.8"
+                android:endY="40.4"
+                android:startX="-6.4934393E-16"
+                android:startY="-9.740159E-16"
+                android:type="linear">
+                <item
+                    android:color="#FF343F3F"
+                    android:offset="0" />
+                <item
+                    android:color="#FFC86DD7"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path
+        android:fillColor="#00000000"
+        android:pathData="M20,20m-19.5,0a19.5,19.5 0,1 1,39 0a19.5,19.5 0,1 1,-39 0"
+        android:strokeWidth="1"
+        android:strokeColor="#fff" />
 </vector>
