--- a/app/src/main/res/drawable/ic_group.xml
+++ b/app/src/main/res/drawable/ic_group.xml
@@ -3,7 +3,7 @@
     android:height="21dp"
     android:viewportWidth="12"
     android:viewportHeight="21">
-  <path
-      android:pathData="M9.538,20.572L0.292,11.213a1.016,1.016 0,0 1,0 -1.426L9.538,0.428a1.431,1.431 0,0 1,2.041 0,1.475 1.475,0 0,1 0,2.065L3.669,10.5l7.909,8.006a1.476,1.476 0,0 1,0 2.066,1.431 1.431,0 0,1 -2.041,0"
-      android:fillColor="#7b1e58"/>
+    <path
+        android:fillColor="#7b1e58"
+        android:pathData="M9.538,20.572L0.292,11.213a1.016,1.016 0,0 1,0 -1.426L9.538,0.428a1.431,1.431 0,0 1,2.041 0,1.475 1.475,0 0,1 0,2.065L3.669,10.5l7.909,8.006a1.476,1.476 0,0 1,0 2.066,1.431 1.431,0 0,1 -2.041,0" />
 </vector>
