--- a/app/src/main/res/drawable/ic_oval.xml
+++ b/app/src/main/res/drawable/ic_oval.xml
@@ -3,10 +3,10 @@
     android:height="10dp"
     android:viewportWidth="30"
     android:viewportHeight="10">
-  <path
-      android:pathData="M0,5a5.5,5 0,1 0,11 0a5.5,5 0,1 0,-11 0z"
-      android:fillColor="#7b1e58"/>
-  <path
-      android:pathData="M19,5a5.5,5 0,1 0,11 0a5.5,5 0,1 0,-11 0z"
-      android:fillColor="#eee"/>
+    <path
+        android:fillColor="#7b1e58"
+        android:pathData="M0,5a5.5,5 0,1 0,11 0a5.5,5 0,1 0,-11 0z" />
+    <path
+        android:fillColor="#eee"
+        android:pathData="M19,5a5.5,5 0,1 0,11 0a5.5,5 0,1 0,-11 0z" />
 </vector>
