--- a/app/src/main/res/drawable/ic_oval_5.xml
+++ b/app/src/main/res/drawable/ic_oval_5.xml
@@ -4,18 +4,21 @@
     android:height="8dp"
     android:viewportWidth="8"
     android:viewportHeight="8">
-  <path
-      android:pathData="M4,4m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startY="-1.9480318E-16"
-          android:startX="4"
-          android:endY="8"
-          android:endX="4"
-          android:type="linear">
-        <item android:offset="0" android:color="#FFFAD961"/>
-        <item android:offset="1" android:color="#FFF76B1C"/>
-      </gradient>
-    </aapt:attr>
-  </path>
+    <path android:pathData="M4,4m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:endX="4"
+                android:endY="8"
+                android:startX="4"
+                android:startY="-1.9480318E-16"
+                android:type="linear">
+                <item
+                    android:color="#FFFAD961"
+                    android:offset="0" />
+                <item
+                    android:color="#FFF76B1C"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
 </vector>
