--- a/app/src/main/res/drawable/ic_oval_6.xml
+++ b/app/src/main/res/drawable/ic_oval_6.xml
@@ -4,18 +4,21 @@
     android:height="8dp"
     android:viewportWidth="8"
     android:viewportHeight="8">
-  <path
-      android:pathData="M4,4m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0">
-    <aapt:attr name="android:fillColor">
-      <gradient 
-          android:startY="0.048"
-          android:startX="0.048"
-          android:endY="7.824"
-          android:endX="7.824"
-          android:type="linear">
-        <item android:offset="0" android:color="#FF3D1054"/>
-        <item android:offset="1" android:color="#FF7B1E58"/>
-      </gradient>
-    </aapt:attr>
-  </path>
+    <path android:pathData="M4,4m-4,0a4,4 0,1 1,8 0a4,4 0,1 1,-8 0">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:endX="7.824"
+                android:endY="7.824"
+                android:startX="0.048"
+                android:startY="0.048"
+                android:type="linear">
+                <item
+                    android:color="#FF3D1054"
+                    android:offset="0" />
+                <item
+                    android:color="#FF7B1E58"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
 </vector>
