--- a/app/src/main/res/drawable/ic_searchfield.xml
+++ b/app/src/main/res/drawable/ic_searchfield.xml
@@ -3,7 +3,7 @@
     android:height="36dp"
     android:viewportWidth="343"
     android:viewportHeight="36">
-  <path
-      android:pathData="M10,0L333,0A10,10 0,0 1,343 10L343,26A10,10 0,0 1,333 36L10,36A10,10 0,0 1,0 26L0,10A10,10 0,0 1,10 0z"
-      android:fillColor="#E0DFDF"/>
+    <path
+        android:fillColor="#E0DFDF"
+        android:pathData="M10,0L333,0A10,10 0,0 1,343 10L343,26A10,10 0,0 1,333 36L10,36A10,10 0,0 1,0 26L0,10A10,10 0,0 1,10 0z" />
 </vector>
