--- a/app/src/main/res/layout/activity_edit1.xml
+++ b/app/src/main/res/layout/activity_edit1.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Edit1Activity"
     android:background="@color/purple"
     android:orientation="vertical"
-    >
+    tools:context=".Edit1Activity">
+
     <LinearLayout
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="45dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="45dp"
         android:orientation="horizontal">
+
         <ImageView
 
-            android:paddingHorizontal="11dp"
-
-            android:paddingVertical="18dp"
             android:layout_width="wrap_content"
+
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
+            android:paddingHorizontal="11dp"
+            android:paddingVertical="18dp"
 
-            android:src="@drawable/ic_left"/>
+            android:src="@drawable/ic_left" />
+
         <View
             android:layout_width="0dp"
             android:layout_height="match_parent"
@@ -35,58 +36,55 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
-            app:srcCompat="@drawable/pickershap"/>
-
+            app:srcCompat="@drawable/pickershap" />
 
 
     </LinearLayout>
-    <LinearLayout
-        android:layout_marginVertical="16dp"
-        android:layout_marginHorizontal="24dp"
 
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+
+        android:layout_marginHorizontal="24dp"
+        android:layout_marginVertical="16dp">
 
         <CheckBox
-            android:backgroundTint="@color/white"
-
             android:layout_width="wrap_content"
+
             android:layout_height="wrap_content"
+            android:backgroundTint="@color/white"
             android:buttonTint="@color/white"
             android:paddingStart="8dp"
-            android:text="@string/date"
-            />
+            android:text="@string/date" />
 
 
     </LinearLayout>
 
     <LinearLayout
-        android:layout_marginHorizontal="24dp"
-        android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="24dp"
+        android:orientation="vertical">
 
 
         <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginBottom="7dp"
-            android:textSize="22dp"
-            android:textStyle="bold"
-            android:layout_marginStart="10dp"
             android:text="@string/note_app_design"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:textColor="#000000"
-            />
-        <TextView
-            android:textSize="16dp"
-            android:paddingTop="7dp"
-            android:layout_marginStart="10dp"
-            android:text="@string/app_w"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textColor="#000000"
-            />
+            android:textSize="22dp"
+            android:textStyle="bold" />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:paddingTop="7dp"
+            android:text="@string/app_w"
+            android:textColor="#000000"
+            android:textSize="16dp" />
 
 
     </LinearLayout>
