--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -3,79 +3,81 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:layout_marginHorizontal="15dp"
     android:orientation="vertical"
-    android:layout_height="match_parent"
     tools:context=".Forgot_passwordActivity">
+
     <LinearLayout
-        android:layout_marginHorizontal="15dp"
-        android:layout_marginTop="45dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="15dp"
+        android:layout_marginTop="45dp"
 
         android:orientation="horizontal">
 
         <ImageView
-            android:layout_marginStart="12dp"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
+            android:layout_marginStart="12dp"
             android:paddingHorizontal="11dp"
             android:paddingVertical="18dp"
             android:src="@drawable/back_re" />
     </LinearLayout>
 
-       <TextView
-        android:paddingHorizontal="18dp"
-        android:textStyle="bold"
-        android:paddingTop="5dp"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginStart="12dp"
         android:layout_marginTop="21dp"
-        android:textSize="31dp"
+        android:paddingHorizontal="18dp"
+        android:paddingTop="5dp"
         android:text="@string/forget1"
-        android:layout_width="match_parent"
         android:textColor="#1A1824"
-        android:layout_height="wrap_content"/>
+        android:textSize="31dp"
+        android:textStyle="bold" />
 
     <TextView
 
-        android:paddingTop="5dp"
-        android:layout_marginHorizontal="30dp"
-        android:layout_marginTop="16dp"
-        android:textSize="16dp"
-        android:text="@string/enter"
-        android:layout_width="match_parent"
-        android:textColor="#1A1824"
-        android:layout_height="wrap_content" />
-    <EditText
-
-        android:layout_marginHorizontal="30dp"
-        android:textColorHint="@color/emai_pass_hint"
-        android:layout_marginTop="19dp"
-        app:backgroundTint="@color/black"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="16dp"
+        android:paddingTop="5dp"
+        android:text="@string/enter"
+        android:textColor="#1A1824"
+        android:textSize="16dp" />
+
+    <EditText
+
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="19dp"
         android:hint="@string/email"
+        android:textColorHint="@color/emai_pass_hint"
+        app:backgroundTint="@color/black"
 
 
         />
 
     <View
-        android:layout_marginTop="15dp"
-
-        android:layout_marginHorizontal="30dp"
         android:layout_width="match_parent"
+
         android:layout_height="0dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginTop="15dp"
         android:layout_weight="1"></View>
 
     <Button
-        android:textAllCaps="false"
-
-        android:layout_marginHorizontal="30dp"
-        android:textColor="@color/white"
-        android:background="@drawable/but_sing"
-        android:layout_marginBottom="16dp"
         android:layout_width="match_parent"
+
         android:layout_height="wrap_content"
-        android:text="@string/Recover_password"/>
+        android:layout_marginHorizontal="30dp"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/but_sing"
+        android:text="@string/Recover_password"
+        android:textAllCaps="false"
+        android:textColor="@color/white" />
 
 </LinearLayout>
