--- a/app/src/main/res/layout/notebook_tutorial_1.xml
+++ b/app/src/main/res/layout/notebook_tutorial_1.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:orientation="vertical"
-    android:weightSum="2">
+    android:weightSum="2"
+    tools:context=".MainActivity">
 
 
     <ImageView
@@ -25,77 +25,74 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image"
-        android:orientation="vertical">
+        app:layout_constraintTop_toBottomOf="@id/image">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="26sp"
-            android:textColor="#7b1e58"
+            android:layout_gravity="center"
+            android:gravity="center_horizontal"
             android:lineSpacingExtra="9sp"
-            android:gravity="center_horizontal"
-            android:text="Notebooks"
-            android:layout_gravity="center"
             android:padding="16dp"
-            />
+            android:text="Notebooks"
+            android:textColor="#7b1e58"
+            android:textSize="26sp" />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="#9b9faa"
-            android:lineSpacingExtra="8sp"
-            android:gravity="center_horizontal"
-            android:text="Notebooks are the best place to manage your Notes "
             android:layout_gravity="center"
+            android:gravity="center_horizontal"
+            android:lineSpacingExtra="8sp"
             android:paddingStart="44dp"
             android:paddingEnd="44dp"
             android:paddingBottom="32dp"
-            />
+            android:text="Notebooks are the best place to manage your Notes "
+            android:textColor="#9b9faa"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="44dp"
+            android:orientation="horizontal"
             android:weightSum="3">
 
             <TextView
                 android:id="@+id/skip"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="#9b9b9b"
+                android:layout_weight="1"
                 android:lineSpacingExtra="5sp"
+                android:padding="8dp"
                 android:text="Skip"
-                android:padding="8dp"/>
+                android:textColor="#9b9b9b"
+                android:textSize="16sp" />
 
             <ImageView
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center"
-                app:srcCompat="@drawable/ic_oval"/>
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_oval" />
 
             <TextView
                 android:id="@+id/next"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="#ffffff"
-                android:lineSpacingExtra="5sp"
-                android:gravity="center_horizontal"
-                android:text="Next"
+                android:layout_weight="1"
                 android:background="@drawable/ic_create_account"
+                android:gravity="center_horizontal"
+                android:lineSpacingExtra="5sp"
                 android:padding="16dp"
-                />
+                android:text="Next"
+                android:textColor="#ffffff"
+                android:textSize="16sp" />
 
 
         </LinearLayout>
