--- a/app/src/main/res/layout/notebook_tutorial_2.xml
+++ b/app/src/main/res/layout/notebook_tutorial_2.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity"
     android:orientation="vertical"
-    android:weightSum="2">
+    android:weightSum="2"
+    tools:context=".MainActivity">
 
     <RelativeLayout
         android:id="@+id/image"
@@ -20,13 +20,14 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            app:srcCompat="@drawable/ic_tutorial"
-            android:scaleType="center"/>
+            android:scaleType="center"
+            app:srcCompat="@drawable/ic_tutorial" />
+
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:src="@drawable/books"
-            android:layout_centerInParent="true"/>
+            android:layout_centerInParent="true"
+            android:src="@drawable/books" />
 
     </RelativeLayout>
 
@@ -34,78 +35,75 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
+        android:orientation="vertical"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/image"
-        android:orientation="vertical">
+        app:layout_constraintTop_toBottomOf="@id/image">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="24sp"
-            android:textColor="#4a4a4a"
-            android:lineSpacingExtra="8sp"
-            android:gravity="center_horizontal"
-            android:text="Add Notes to Notebook"
             android:layout_gravity="center"
+            android:gravity="center_horizontal"
+            android:lineSpacingExtra="8sp"
             android:padding="16dp"
-            />
+            android:text="Add Notes to Notebook"
+            android:textColor="#4a4a4a"
+            android:textSize="24sp" />
 
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="#9b9faa"
-            android:lineSpacingExtra="8sp"
-            android:gravity="center_horizontal"
-            android:text="Simply create your note and add it to your favorite notebook"
             android:layout_gravity="center"
+            android:gravity="center_horizontal"
+            android:lineSpacingExtra="8sp"
             android:paddingStart="44dp"
             android:paddingEnd="44dp"
             android:paddingBottom="32dp"
-            />
+            android:text="Simply create your note and add it to your favorite notebook"
+            android:textColor="#9b9faa"
+            android:textSize="18sp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="44dp"
+            android:orientation="horizontal"
             android:weightSum="3">
 
             <TextView
                 android:id="@+id/skip"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="#9b9b9b"
+                android:layout_weight="1"
                 android:lineSpacingExtra="5sp"
+                android:padding="8dp"
                 android:text="Skip"
-                android:padding="8dp"/>
+                android:textColor="#9b9b9b"
+                android:textSize="16sp" />
 
             <ImageView
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center"
-                app:srcCompat="@drawable/ic_oval7"/>
+                android:layout_weight="1"
+                app:srcCompat="@drawable/ic_oval7" />
 
             <TextView
                 android:id="@+id/next"
                 android:layout_width="0dp"
-                android:layout_weight="1"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
-                android:textColor="#ffffff"
-                android:lineSpacingExtra="5sp"
-                android:gravity="center_horizontal"
-                android:text="Next"
+                android:layout_weight="1"
                 android:background="@drawable/ic_create_account"
+                android:gravity="center_horizontal"
+                android:lineSpacingExtra="5sp"
                 android:padding="16dp"
-                />
+                android:text="Next"
+                android:textColor="#ffffff"
+                android:textSize="16sp" />
 
 
         </LinearLayout>
